UI now loads user ratings and comments for selected gif. allowed unique constraint. gifs can only have 1 rating. API automatically includes ratings and comments on each returned Gif
